--- a/index.html
+++ b/index.html
@@ -46,16 +46,18 @@
         <section id="about" class="max-w-6xl mx-auto px-4 py-20 bg-[#020617]">
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div class="p-8 rounded-2xl border border-slate-800 bg-slate-900/50 hover:border-emerald-500/30 transition">
-                    <h3 class="text-emerald-400 font-bold mb-4 flex items-center gap-2"><span>🔬</span> GenAI & LLMs</h3>
-                    <p class="text-sm text-slate-400 leading-relaxed font-mono">LangGraph, Gemini, Groq, RAG, LangChain, Agentic AI, Hugging Face.</p>
+                    <h3 class="text-emerald-400 font-bold mb-4 flex items-center gap-2"><span>🔬</span> Gen AI & LLMs</h3>
+                    <p class="text-sm text-slate-400 leading-relaxed font-mono">LangGraph, Llama 3.3 (70B), Gemini 1.5 / 2.5, Groq API, Gemini API, Pollinations AI (Multimodal), Hugging Face, LangChain, RAG Systems, Agentic Web-Intelligence.</p>
                 </div>
                 <div class="p-8 rounded-2xl border border-slate-800 bg-slate-900/50 hover:border-emerald-500/30 transition">
                     <h3 class="text-emerald-400 font-bold mb-4 flex items-center gap-2"><span>💻</span> Backend & Data</h3>
-                    <p class="text-sm text-slate-400 leading-relaxed font-mono">Python, FastAPI, Streamlit, Docker, PostgreSQL, FAISS, Pandas, NumPy.</p>
+                    <p class="text-sm text-slate-400 leading-relaxed font-mono"> Python, FastAPI, Streamlit, Docker, PostgreSQL, SMTP Automation.
+DuckDuckGo Search API, Pandas, NumPy, Scikit-learn, FAISS (Vector DB), Matplotlib, Seaborn</p>
                 </div>
                 <div class="p-8 rounded-2xl border border-slate-800 bg-slate-900/50 hover:border-emerald-500/30 transition">
                     <h3 class="text-emerald-400 font-bold mb-4 flex items-center gap-2"><span>🚀</span> Engineering</h3>
-                    <p class="text-sm text-slate-400 leading-relaxed font-mono">API Integration, Exponential Backoff, Git, Deployment, Secrets Management.</p>
+                    <p class="text-sm text-slate-400 leading-relaxed font-mono">Robust API Integration, Exponential Backoff (Tenacity), Git/GitHub Version Control, Cloud Deployment, Secrets Management (Streamlit/Local Environment).
+</p>
                 </div>
             </div>
         </section>
@@ -66,28 +68,28 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-16">
                 <div class="group border border-slate-800 rounded-2xl overflow-hidden hover:border-emerald-500/50 transition-all bg-slate-900/20 p-8">
                     <span class="text-emerald-500 text-xs font-mono uppercase tracking-widest font-bold">New Project</span>
-                    <h4 class="text-2xl font-bold text-white mt-2 mb-4">AgenticSalesPro</h4>
+                    <h4 class="text-2xl font-bold text-white mt-2 mb-4">SalesScout AI Pro</h4>
                     <p class="text-slate-400 mb-6 text-sm">Autonomous sales intelligence using multi-agent orchestration.</p>
                     <a href="https://github.com/sadsunsuf-lgtm/AgenticSalesPro" target="_blank" class="inline-block border border-emerald-500/50 text-emerald-400 px-4 py-2 rounded-lg text-xs font-mono hover:bg-emerald-500 hover:text-black transition">View Repository</a>
                 </div>
 
                 <div class="group border border-slate-800 rounded-2xl overflow-hidden hover:border-emerald-500/50 transition-all bg-slate-900/20 p-8">
                     <span class="text-emerald-500 text-xs font-mono uppercase tracking-widest font-bold">HR Tech</span>
-                    <h4 class="text-2xl font-bold text-white mt-2 mb-4">Talent Guard</h4>
+                    <h4 class="text-2xl font-bold text-white mt-2 mb-4">Talent Guard: AI-Powered Resume Leaderboard</h4>
                     <p class="text-slate-400 mb-6 text-sm">AI-driven resume ranking with automated retry logic.</p>
                     <a href="https://github.com/sadsunsuf-lgtm/AI-Resume-Screener" target="_blank" class="inline-block border border-emerald-500/50 text-emerald-400 px-4 py-2 rounded-lg text-xs font-mono hover:bg-emerald-500 hover:text-black transition">View Repository</a>
                 </div>
 
                 <div class="group border border-slate-800 rounded-2xl overflow-hidden hover:border-emerald-500/50 transition-all bg-slate-900/20 p-8">
                     <span class="text-emerald-500 text-xs font-mono uppercase tracking-widest font-bold">RAG</span>
-                    <h4 class="text-2xl font-bold text-white mt-2 mb-4">Doc Intelligence</h4>
-                    <p class="text-slate-400 mb-6 text-sm">Semantic RAG system for document knowledge retrieval.</p>
-                    <a href="https://github.com/sadsunsuf-lgtm/AI-Document-Intelligence" target="_blank" class="inline-block border border-emerald-500/50 text-emerald-400 px-4 py-2 rounded-lg text-xs font-mono hover:bg-emerald-500 hover:text-black transition">View Repository</a>
+                    <h4 class="text-2xl font-bold text-white mt-2 mb-4">Enterprise AI Knowledge Engine</h4>
+                    <p class="text-slate-400 mb-6 text-sm">A High-Performance RAG (Retrieval-Augmented Generation) System for Private Data.</p>
+                    <a href="https://github.com/sadsunsuf-lgtm/-Enterprise-AI-Knowledge-Engine" target="_blank" class="inline-block border border-emerald-500/50 text-emerald-400 px-4 py-2 rounded-lg text-xs font-mono hover:bg-emerald-500 hover:text-black transition">View Repository</a>
                 </div>
 
                 <div class="group border border-slate-800 rounded-2xl overflow-hidden hover:border-emerald-500/50 transition-all bg-slate-900/20 p-8">
                     <span class="text-emerald-500 text-xs font-mono uppercase tracking-widest font-bold">GenAI</span>
-                    <h4 class="text-2xl font-bold text-white mt-2 mb-4">LinkedIn Automation</h4>
+                    <h4 class="text-2xl font-bold text-white mt-2 mb-4">Autonomous AI Content Engineer (v2.5)</h4>
                     <p class="text-slate-400 mb-6 text-sm">Multimodal AI for automated branding and content strategy.</p>
                     <a href="https://github.com/sadsunsuf-lgtm/linkedin-automation-agent" target="_blank" class="inline-block border border-emerald-500/50 text-emerald-400 px-4 py-2 rounded-lg text-xs font-mono hover:bg-emerald-500 hover:text-black transition">View Repository</a>
                 </div>
@@ -95,19 +97,19 @@
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
                 <div class="p-6 bg-slate-900/40 border border-slate-800 rounded-xl hover:bg-slate-800/60 transition group">
-                    <h5 class="text-white font-bold text-sm">Research Orchestrator</h5>
+                    <h5 class="text-white font-bold text-sm"> AI Research Orchestrator Pro</h5>
                     <a href="https://github.com/sadsunsuf-lgtm/AI-Research-Orchestrator" class="text-[10px] font-mono text-emerald-500 underline">View Repo</a>
                 </div>
                 <div class="p-6 bg-slate-900/40 border border-slate-800 rounded-xl hover:bg-slate-800/60 transition group">
-                    <h5 class="text-white font-bold text-sm">Business Assistant</h5>
-                    <a href="https://github.com/sadsunsuf-lgtm/ai-business-assistant" class="text-[10px] font-mono text-emerald-500 underline">View Repo</a>
+                    <h5 class="text-white font-bold text-sm">DocIntel Pro: Enterprise Document Intelligence Platform</h5>
+                    <a href="https://github.com/sadsunsuf-lgtm/AI-document-Intelligence" class="text-[10px] font-mono text-emerald-500 underline">View Repo</a>
                 </div>
                 <div class="p-6 bg-slate-900/40 border border-slate-800 rounded-xl hover:bg-slate-800/60 transition group">
-                    <h5 class="text-white font-bold text-sm">Knowledge Engine</h5>
-                    <a href="https://github.com/sadsunsuf-lgtm/-Enterprise-AI-Knowledge-Engine" class="text-[10px] font-mono text-emerald-500 underline">View Repo</a>
+                    <h5 class="text-white font-bold text-sm"> AI Workflow Orchestrator</h5>
+                    <a href="https://github.com/sadsunsuf-lgtm/AI-workflow-orchestrator" class="text-[10px] font-mono text-emerald-500 underline">View Repo</a>
                 </div>
                 <div class="p-6 bg-slate-900/40 border border-slate-800 rounded-xl hover:bg-slate-800/60 transition group">
-                    <h5 class="text-white font-bold text-sm">Self-Healing Agent</h5>
+                    <h5 class="text-white font-bold text-sm">Autonomous Self-Healing Multi-Agent System (MAS)</h5>
                     <a href="https://github.com/sadsunsuf-lgtm/self-healing-ai-agent" class="text-[10px] font-mono text-emerald-500 underline">View Repo</a>
                 </div>
             </div>
