--- a/index.html
+++ b/index.html
@@ -51,13 +51,11 @@
                 </div>
                 <div class="p-8 rounded-2xl border border-slate-800 bg-slate-900/50 hover:border-emerald-500/30 transition">
                     <h3 class="text-emerald-400 font-bold mb-4 flex items-center gap-2"><span>💻</span> Backend & Data</h3>
-                    <p class="text-sm text-slate-400 leading-relaxed font-mono"> Python, FastAPI, Streamlit, Docker, PostgreSQL, SMTP Automation.
-DuckDuckGo Search API, Pandas, NumPy, Scikit-learn, FAISS (Vector DB), Matplotlib, Seaborn</p>
+                    <p class="text-sm text-slate-400 leading-relaxed font-mono"> Python, FastAPI, Streamlit, Docker, PostgreSQL, SMTP Automation. DuckDuckGo Search API, Pandas, NumPy, Scikit-learn, FAISS (Vector DB), Matplotlib, Seaborn</p>
                 </div>
                 <div class="p-8 rounded-2xl border border-slate-800 bg-slate-900/50 hover:border-emerald-500/30 transition">
                     <h3 class="text-emerald-400 font-bold mb-4 flex items-center gap-2"><span>🚀</span> Engineering</h3>
-                    <p class="text-sm text-slate-400 leading-relaxed font-mono">Robust API Integration, Exponential Backoff (Tenacity), Git/GitHub Version Control, Cloud Deployment, Secrets Management (Streamlit/Local Environment).
-</p>
+                    <p class="text-sm text-slate-400 leading-relaxed font-mono">Robust API Integration, Exponential Backoff (Tenacity), Git/GitHub Version Control, Cloud Deployment, Secrets Management.</p>
                 </div>
             </div>
         </section>
@@ -75,7 +73,7 @@ DuckDuckGo Search API, Pandas, NumPy, Scikit-learn, FAISS (Vector DB), Matplotli
 
                 <div class="group border border-slate-800 rounded-2xl overflow-hidden hover:border-emerald-500/50 transition-all bg-slate-900/20 p-8">
                     <span class="text-emerald-500 text-xs font-mono uppercase tracking-widest font-bold">HR Tech</span>
-                    <h4 class="text-2xl font-bold text-white mt-2 mb-4">Talent Guard: AI-Powered Resume Leaderboard</h4>
+                    <h4 class="text-2xl font-bold text-white mt-2 mb-4">Talent Guard</h4>
                     <p class="text-slate-400 mb-6 text-sm">AI-driven resume ranking with automated retry logic.</p>
                     <a href="https://github.com/sadsunsuf-lgtm/AI-Resume-Screener" target="_blank" class="inline-block border border-emerald-500/50 text-emerald-400 px-4 py-2 rounded-lg text-xs font-mono hover:bg-emerald-500 hover:text-black transition">View Repository</a>
                 </div>
@@ -83,56 +81,55 @@ DuckDuckGo Search API, Pandas, NumPy, Scikit-learn, FAISS (Vector DB), Matplotli
                 <div class="group border border-slate-800 rounded-2xl overflow-hidden hover:border-emerald-500/50 transition-all bg-slate-900/20 p-8">
                     <span class="text-emerald-500 text-xs font-mono uppercase tracking-widest font-bold">RAG</span>
                     <h4 class="text-2xl font-bold text-white mt-2 mb-4">Enterprise AI Knowledge Engine</h4>
-                    <p class="text-slate-400 mb-6 text-sm">A High-Performance RAG (Retrieval-Augmented Generation) System for Private Data.</p>
+                    <p class="text-slate-400 mb-6 text-sm">High-Performance RAG System for Private Data.</p>
                     <a href="https://github.com/sadsunsuf-lgtm/-Enterprise-AI-Knowledge-Engine" target="_blank" class="inline-block border border-emerald-500/50 text-emerald-400 px-4 py-2 rounded-lg text-xs font-mono hover:bg-emerald-500 hover:text-black transition">View Repository</a>
                 </div>
 
                 <div class="group border border-slate-800 rounded-2xl overflow-hidden hover:border-emerald-500/50 transition-all bg-slate-900/20 p-8">
                     <span class="text-emerald-500 text-xs font-mono uppercase tracking-widest font-bold">GenAI</span>
-                    <h4 class="text-2xl font-bold text-white mt-2 mb-4">Autonomous AI Content Engineer (v2.5)</h4>
+                    <h4 class="text-2xl font-bold text-white mt-2 mb-4">Autonomous AI Content Engineer</h4>
                     <p class="text-slate-400 mb-6 text-sm">Multimodal AI for automated branding and content strategy.</p>
                     <a href="https://github.com/sadsunsuf-lgtm/linkedin-automation-agent" target="_blank" class="inline-block border border-emerald-500/50 text-emerald-400 px-4 py-2 rounded-lg text-xs font-mono hover:bg-emerald-500 hover:text-black transition">View Repository</a>
                 </div>
             </div>
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
-                <div class="p-6 bg-slate-900/40 border border-slate-800 rounded-xl hover:bg-slate-800/60 transition group">
-                    <h5 class="text-white font-bold text-sm">Autonomous Self-Healing Multi-Agent System (MAS)</h5>
+                <div class="p-6 bg-slate-900/40 border border-slate-800 rounded-xl hover:bg-slate-800/60 transition group text-center">
+                    <h5 class="text-white font-bold text-sm">Self-Healing MAS</h5>
                     <a href="https://github.com/sadsunsuf-lgtm/self-healing-ai-agent" class="text-[10px] font-mono text-emerald-500 underline">View Repo</a>
                 </div>
-                <div class="p-6 bg-slate-900/40 border border-slate-800 rounded-xl hover:bg-slate-800/60 transition group">
-                    <h5 class="text-white font-bold text-sm">DocIntel Pro: Enterprise Document Intelligence Platform</h5>
+                <div class="p-6 bg-slate-900/40 border border-slate-800 rounded-xl hover:bg-slate-800/60 transition group text-center">
+                    <h5 class="text-white font-bold text-sm">DocIntel Pro</h5>
                     <a href="https://github.com/sadsunsuf-lgtm/AI-document-Intelligence" class="text-[10px] font-mono text-emerald-500 underline">View Repo</a>
                 </div>
-                <div class="p-6 bg-slate-900/40 border border-slate-800 rounded-xl hover:bg-slate-800/60 transition group">
-                    <h5 class="text-white font-bold text-sm"> AI Workflow Orchestrator</h5>
+                <div class="p-6 bg-slate-900/40 border border-slate-800 rounded-xl hover:bg-slate-800/60 transition group text-center">
+                    <h5 class="text-white font-bold text-sm">Workflow Orchestrator</h5>
                     <a href="https://github.com/sadsunsuf-lgtm/AI-workflow-orchestrator" class="text-[10px] font-mono text-emerald-500 underline">View Repo</a>
                 </div>
-                <div class="p-6 bg-slate-900/40 border border-slate-800 rounded-xl hover:bg-slate-800/60 transition group">
-                    <h5 class="text-white font-bold text-sm">AI Research Orchestrator Pro</h5>
+                <div class="p-6 bg-slate-900/40 border border-slate-800 rounded-xl hover:bg-slate-800/60 transition group text-center">
+                    <h5 class="text-white font-bold text-sm">Research Orchestrator</h5>
                     <a href="https://github.com/sadsunsuf-lgtm/AI-Research-Orchestrator" class="text-[10px] font-mono text-emerald-500 underline">View Repo</a>
                 </div>
             </div>
         </section>
 
-        <section id="contact" class="max-w-6xl mx-auto px-4 py-20 border-t border-slate-800">
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-16">
-                <div>
-                    <h3 class="text-3xl font-bold text-white mb-6">Let's build the future.</h3>
-                    <p class="text-slate-400 mb-8 leading-relaxed">Currently open to AI Engineering and ML Operations roles.</p>
-                    <div class="space-y-6">
-                        <a href="mailto:sadsunsuf@gmail.com" class="block text-emerald-400 font-bold hover:text-emerald-300 transition text-xl">sadsunsuf@gmail.com</a>
-                        <div class="flex gap-4">
-                            <a href="https://github.com/sadsunsuf-lgtm" target="_blank" class="px-6 py-2 bg-slate-800 rounded-lg text-sm hover:bg-emerald-500/20 transition border border-slate-700">GitHub</a>
-                            <a href="https://www.linkedin.com/in/sana-nasir-521937316/" target="_blank" class="px-6 py-2 bg-slate-800 rounded-lg text-sm hover:bg-emerald-500/20 transition border border-slate-700">LinkedIn</a>
-                        </div>
-                    </div>
+        <section id="contact" class="max-w-4xl mx-auto px-4 py-20 border-t border-slate-800 text-center">
+            <h3 class="text-3xl font-bold text-white mb-6">Let's build the future.</h3>
+            <p class="text-slate-400 mb-10 leading-relaxed max-w-2xl mx-auto">Currently open to AI Engineering and ML Operations roles. Feel free to reach out via email or connect with me on social platforms.</p>
+            
+            <div class="flex flex-col items-center space-y-8">
+                <a href="mailto:sadsunsuf@gmail.com" class="text-2xl md:text-3xl font-bold text-emerald-400 hover:text-emerald-300 transition break-all">
+                    sadsunsuf@gmail.com
+                </a>
+                
+                <div class="flex flex-wrap justify-center gap-6">
+                    <a href="https://github.com/sadsunsuf-lgtm" target="_blank" class="px-8 py-3 bg-slate-800 rounded-xl text-sm font-bold hover:bg-emerald-500/20 hover:border-emerald-500 transition border border-slate-700">
+                        GitHub
+                    </a>
+                    <a href="https://www.linkedin.com/in/sana-nasir-521937316/" target="_blank" class="px-8 py-3 bg-slate-800 rounded-xl text-sm font-bold hover:bg-emerald-500/20 hover:border-emerald-500 transition border border-slate-700">
+                        LinkedIn
+                    </a>
                 </div>
-                <form onsubmit="sendEmail(event)" class="space-y-4 bg-slate-900/50 p-8 rounded-2xl border border-slate-800">
-                    <input type="text" id="name" required placeholder="Name" class="w-full bg-slate-800 border border-slate-700 rounded-lg p-3 text-white focus:border-emerald-500 outline-none">
-                    <textarea id="message" required placeholder="Your Message" rows="4" class="w-full bg-slate-800 border border-slate-700 rounded-lg p-3 text-white focus:border-emerald-500 outline-none"></textarea>
-                    <button type="submit" class="w-full bg-emerald-500 hover:bg-emerald-600 text-slate-950 font-bold py-3 rounded-lg transition">Send Message</button>
-                </form>
             </div>
         </section>
     </main>
@@ -141,14 +138,6 @@ DuckDuckGo Search API, Pandas, NumPy, Scikit-learn, FAISS (Vector DB), Matplotli
         &copy; 2026 SANA NASIR | Intelligent Systems Portfolio
     </footer>
 
-    <script>
-        function sendEmail(e) {
-            e.preventDefault();
-            const name = document.getElementById('name').value;
-            const message = document.getElementById('message').value;
-            window.location.href = `mailto:sadsunsuf@gmail.com?subject=Inquiry from ${name}&body=${message}`;
-        }
-    </script>
     <script src="script.js"></script>
 </body>
 </html>
